--- a/src/NServiceBus.CommonLogging/packages.config
+++ b/src/NServiceBus.CommonLogging/packages.config
@@ -2,7 +2,7 @@
 <packages>
   <package id="Common.Logging" version="3.0.0" targetFramework="net45" />
   <package id="Common.Logging.Core" version="3.0.0" targetFramework="net45" />
-  <package id="GitVersionTask" version="1.2.1" targetFramework="net45" developmentDependency="true" />
-  <package id="NServiceBus" version="5.0.0" targetFramework="net45" />
-  <package id="NuGetPackager" version="0.1.4" targetFramework="net45" />
+  <package id="GitVersionTask" version="2.0.1" targetFramework="net45" developmentDependency="true" />
+  <package id="NServiceBus" version="6.0.0-unstable0634" targetFramework="net451" />
+  <package id="NuGetPackager" version="0.5.5" targetFramework="net45" developmentDependency="true" />
 </packages>
