--- a/src/Sample/packages.config
+++ b/src/Sample/packages.config
@@ -2,5 +2,5 @@
 <packages>
   <package id="Common.Logging" version="3.0.0" targetFramework="net45" />
   <package id="Common.Logging.Core" version="3.0.0" targetFramework="net45" />
-  <package id="NServiceBus" version="5.0.0" targetFramework="net45" />
+  <package id="NServiceBus" version="6.0.0-unstable0634" targetFramework="net451" />
 </packages>
