--- a/packaging/nuget/NServiceBus.CommonLogging.nuspec
+++ b/packaging/nuget/NServiceBus.CommonLogging.nuspec
@@ -9,7 +9,7 @@
     <licenseUrl>$licenseUrl$</licenseUrl>
     <projectUrl>$projectUrl$</projectUrl>
     <iconUrl>$iconUrl$</iconUrl>
-    <requireLicenseAcceptance>true</requireLicenseAcceptance>
+    <requireLicenseAcceptance>$requireLicenseAcceptance$</requireLicenseAcceptance>
     <description>CommonLogging support for NServiceBus</description>
     <releaseNotes></releaseNotes>
     <copyright>$copyright$</copyright>
@@ -20,6 +20,6 @@
     </dependencies>
   </metadata>
   <files>
-    <file src="..\..\binaries\NServiceBus.CommonLogging.???" target="lib\net45" />
+    <file src="..\..\binaries\NServiceBus.CommonLogging.???" target="lib\net451" />
   </files>
 </package>
