--- a/src/NServiceBus.CommonLogging/packages.config
+++ b/src/NServiceBus.CommonLogging/packages.config
@@ -2,7 +2,7 @@
 <packages>
   <package id="Common.Logging" version="3.0.0" targetFramework="net45" />
   <package id="Common.Logging.Core" version="3.0.0" targetFramework="net45" />
-  <package id="GitVersionTask" version="2.0.1" targetFramework="net45" developmentDependency="true" />
-  <package id="NServiceBus" version="6.0.0-unstable1786" targetFramework="net452" />
-  <package id="NuGetPackager" version="0.5.5" targetFramework="net45" developmentDependency="true" />
+  <package id="GitVersionTask" version="3.4.1" targetFramework="net452" developmentDependency="true" />
+  <package id="NServiceBus" version="6.0.0-beta0001" targetFramework="net452" />
+  <package id="NuGetPackager" version="0.6.0" targetFramework="net452" developmentDependency="true" />
 </packages>
