--- a/packaging/nuget/NServiceBus.CommonLogging.nuspec
+++ b/packaging/nuget/NServiceBus.CommonLogging.nuspec
@@ -13,9 +13,9 @@
     <description>CommonLogging support for NServiceBus</description>
     <releaseNotes></releaseNotes>
     <copyright>$copyright$</copyright>
-    <tags>nservicebus servicebus msmq cqrs publish subscribe</tags>
+    <tags>NServiceBus CommonLogging Logging</tags>
     <dependencies>
-      <dependency id="NServiceBus" version="[6.0.0-rc0001, 7.0.0)" />
+      <dependency id="NServiceBus" version="[6.0.0, 7.0.0)" />
       <dependency id="Common.Logging" version="[3.0.0, 4.0.0)" />
     </dependencies>
   </metadata>
