--- a/src/NServiceBus.CommonLogging/packages.config
+++ b/src/NServiceBus.CommonLogging/packages.config
@@ -3,6 +3,6 @@
   <package id="Common.Logging" version="3.3.1" targetFramework="net452" />
   <package id="Common.Logging.Core" version="3.3.1" targetFramework="net452" />
   <package id="GitVersionTask" version="3.6.3" targetFramework="net452" developmentDependency="true" />
-  <package id="NServiceBus" version="6.0.0-rc0001" targetFramework="net452" />
+  <package id="NServiceBus" version="6.0.0" targetFramework="net452" />
   <package id="NuGetPackager" version="0.6.0" targetFramework="net452" developmentDependency="true" />
 </packages>
