--- a/src/NServiceBus.CommonLogging.Tests/NServiceBus.CommonLogging.Tests.csproj
+++ b/src/NServiceBus.CommonLogging.Tests/NServiceBus.CommonLogging.Tests.csproj
@@ -91,8 +91,8 @@
   <ItemGroup>
     <Compile Include="APIApprovals.cs" />
     <Compile Include="ApprovalTestConfig.cs" />
-    <Compile Include="App_Packages\ApiApprover.3.0.1\PublicApiApprover.cs" />
-    <Compile Include="App_Packages\ApiApprover.3.0.1\PublicApiGenerator.cs" />
+    <Compile Include="App_Packages\ApiApprover.5.0.0\PublicApiApprover.cs" />
+    <Compile Include="App_Packages\PublicApiGenerator.5.0.0\ApiGenerator.cs" />
     <Compile Include="IntegrationTests.cs" />
     <Compile Include="MemoryAdapter.cs" />
     <Compile Include="LogMessageCapture.cs" />
