--- a/packaging/nuget/NServiceBus.CommonLogging.nuspec
+++ b/packaging/nuget/NServiceBus.CommonLogging.nuspec
@@ -20,6 +20,6 @@
     </dependencies>
   </metadata>
   <files>
-    <file src="..\..\binaries\NServiceBus.CommonLogging.???" target="lib\net452" />
+    <file src="..\..\binaries\net452\NServiceBus.CommonLogging.???" target="lib\net452" />
   </files>
 </package>
