--- a/src/NServiceBus.CommonLogging.Tests/NServiceBus.CommonLogging.Tests.csproj
+++ b/src/NServiceBus.CommonLogging.Tests/NServiceBus.CommonLogging.Tests.csproj
@@ -9,16 +9,14 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Remove="NServiceBus.CommonLogging.approved.cs" />
-    <Compile Remove="NServiceBus.Log4Net.approved.cs" />
+    <Compile Remove="NServiceBus.CommonLogging.received.cs" />
     <PackageReference Include="ApprovalTests" Version="3.0.13" />
-    <PackageReference Include="ApprovalUtilities" Version="3.0.13" />
-    <PackageReference Include="Common.Logging" Version="3.3.1" />
-    <PackageReference Include="Common.Logging.Core" Version="3.3.1" />
-    <PackageReference Include="Mono.Cecil" Version="0.10.0-beta6" />
-    <PackageReference Include="NServiceBus" Version="6.3.3" />
-    <PackageReference Include="NUnit" Version="3.7.1" />
-    <PackageReference Include="ApiApprover" Version="6.1.0-beta2" />
-    <PackageReference Include="PublicApiGenerator" Version="6.1.0-beta2" />
+    <PackageReference Include="ApprovalTests" Version="3.*" />
+    <PackageReference Include="ApprovalUtilities" Version="3.*" />
+    <PackageReference Include="Mono.Cecil" Version="0.10.0-*" />
+    <PackageReference Include="NUnit" Version="3.*" />
+    <PackageReference Include="ApiApprover" Version="6.1.0-*" />
+    <PackageReference Include="PublicApiGenerator" Version="6.1.0-*" />
     <ProjectReference Include="..\NServiceBus.CommonLogging\NServiceBus.CommonLogging.csproj" />
   </ItemGroup>
 </Project>
