--- a/src/Sample/Sample.csproj
+++ b/src/Sample/Sample.csproj
@@ -1,11 +1,16 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
     <TargetFrameworks>net452;netcoreapp2.0</TargetFrameworks>
     <OutputType>Exe</OutputType>
   </PropertyGroup>
+
   <ItemGroup>
     <ProjectReference Include="..\NServiceBus.CommonLogging\NServiceBus.CommonLogging.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Common.Logging" Version="3.*" />
   </ItemGroup>
+
 </Project>
